--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbershop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <header>
-      <a href="./index.html"><img src="./images/logo.svg" alt="logo" /></a>
-      <nav>
-        <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Services and prices</a></li>
-          <li><a href="">Barbers</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <a class="header-logo" href="./index.html"><img src="./images/logo.svg" alt="logo" /></a>
+      <nav class="header-nav">
+        <ul class="header-list list">
+          <li class="header-item"><a class="header-link link" href="">About</a></li>
+          <li class="header-item"><a class="header-link link" href="">Services and prices</a></li>
+          <li class="header-item"><a class="header-link link" href="">Barbers</a></li>
+          <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <a href="tel:+380441111111">+38 044 111 11 11</a>
-      <button type="button">online-booking</button>
+      <a class="header-tel link" href="tel:+380441111111">+38 044 111 11 11</a>
+      <button class="header-btn" type="button">online-booking</button>
     </header>
     <main>
       <section>
