--- a/index.html
+++ b/index.html
@@ -26,30 +26,30 @@
       <button class="header-btn" type="button">online-booking</button>
     </header>
     <main>
-      <section>
-        <ul>
-          <li>
-            <a href="" rel="noopener nofollow noreferrer" target="_blank"
+      <section class="hero">
+        <ul class="hero-list list">
+          <li class="hero-item">
+            <a class="hero-link link" href="" rel="noopener nofollow noreferrer" target="_blank"
               >Instagram</a
             >
           </li>
-          <li>
-            <a href="" rel="noopener nofollow noreferrer" target="_blank"
+          <li class="hero-item">
+            <a class="hero-link link" href="" rel="noopener nofollow noreferrer" target="_blank"
               >Youtube</a
             >
           </li>
         </ul>
-        <p>A hair salon for men in Kyiv</p>
-        <h1>BarberShop</h1>
-        <p>
+        <p class="hero-pre-title">A hair salon for men in Kyiv</p>
+        <h1 class="hero-title">BarberShop</h1>
+        <p class="hero-descr">
           We are experts in trendy men’s haircuts. We work quickly, carefully
           and with style.
         </p>
       </section>
 
-      <section>
-        <ul>
-          <li>
+      <section class="about">
+        <ul class="about-list list">
+          <li class="about-item">
             <img
               src="./images/about-img-1.jpg"
               alt="haircut"
@@ -57,7 +57,7 @@
               height="445"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./images/about-img-2.jpg"
               alt="haircut"
@@ -66,136 +66,136 @@
             />
           </li>
         </ul>
-        <p>About</p>
-        <h2>Best Barbershop in your city</h2>
-        <p>
+        <p class="about-pre-title">About</p>
+        <h2 class="about-title">Best Barbershop in your city</h2>
+        <p class="about-after-title">
           If you want to add more confidence to your image, you should
           definitely visit us.
         </p>
-        <p>
+        <p class="about-descr">
           We are a team that never stops at what has been achieved and are
           thirsty for changes. And when you fall into the hands of our master,
           you will never be the same again. We are a team that is always "on the
           same wave" with clients. Therefore, we are always ready to improve
           everyone who comes to us!
         </p>
-        <button type="button">online-booking</button>
+        <button class="about-btn" type="button">online-booking</button>
       </section>
 
-      <section>
-        <p>spend your time with the best masters</p>
-        <h2>Services and prices</h2>
-        <ul>
-          <li>
-            <p>Men’s haircut</p>
-            <p>from 300 uah.</p>
+      <section class="price">
+        <p class="price-pre-title">spend your time with the best masters</p>
+        <h2 class="price-title">Services and prices</h2>
+        <ul class="price-list list">
+          <li class="price-item">
+            <p class="price-name">Men’s haircut</p>
+            <p class="price-descr">from 300 uah.</p>
           </li>
-          <li>
-            <p>Beard trim</p>
-            <p>from 300 uah.</p>
+          <li class="price-item">
+            <p class="price-name">Beard trim</p>
+            <p class="price-descr">from 300 uah.</p>
           </li>
-          <li>
-            <p>Mustache trim</p>
-            <p>from 200 uah.</p>
+          <li class="price-item">
+            <p class="price-name">Mustache trim</p>
+            <p class="price-descr">from 200 uah.</p>
           </li>
-          <li>
-            <p>Straight razor shave</p>
-            <p>from 200 uah.</p>
+          <li class="price-item">
+            <p class="price-name">Straight razor shave</p>
+            <p class="price-descr">from 200 uah.</p>
           </li>
         </ul>
 
-        <ul>
-          <li>
-            <p>Trainee’s haircut</p>
-            <p>from 50 uah.</p>
+        <ul class="price-list list">
+          <li class="price-item">
+            <p class="price-name">Trainee’s haircut</p>
+            <p class="price-descr">from 50 uah.</p>
           </li>
-          <li>
-            <p>Haircut under the nozzle</p>
-            <p>from 200 uah.</p>
+          <li class="price-item">
+            <p class="price-name">Haircut under the nozzle</p>
+            <p class="price-descr">from 200 uah.</p>
           </li>
-          <li>
-            <p>Children’s haircut (0-12 y.o.)</p>
-            <p>from 300 uah.</p>
+          <li class="price-item">
+            <p class="price-name">Children’s haircut (0-12 y.o.)</p>
+            <p class="price-descr">from 300 uah.</p>
           </li>
-          <li>
-            <p>Camouflage of gray hair</p>
-            <p>from 200 uah.</p>
+          <li class="price-item">
+            <p class="price-name">Camouflage of gray hair</p>
+            <p class="price-descr">from 200 uah.</p>
           </li>
         </ul>
-        <button type="button">online-booking</button>
+        <button class="price-btn" type="button">online-booking</button>
       </section>
 
-      <section>
-        <ul>
-          <li>
+      <section class="benefits">
+        <ul class="benefits-list list">
+          <li class="benefits-item">
             <span>600</span>
             <sup>+</sup>
-            <p>Satisfied customers per day</p>
+            <p class="benefits-descr">Satisfied customers per day</p>
           </li>
-          <li>
+          <li class="benefits-item">
             <span>50</span>
             <sup>+</sup>
-            <p>Awards for excellent service</p>
+            <p class="benefits-descr">Awards for excellent service</p>
           </li>
-          <li>
+          <li class="benefits-item">
             <span>20</span>
             <sup>+</sup>
-            <p>Kyiv’s best barbers</p>
+            <p class="benefits-descr">Kyiv’s best barbers</p>
           </li>
-          <li>
+          <li class="benefits-item">
             <span>100</span>
             <sup>+</sup>
-            <p>Gifts for regular customers</p>
+            <p class="benefits-descr">Gifts for regular customers</p>
           </li>
         </ul>
-        <p>old traditional school</p>
-        <h2>Why people come to us?</h2>
-        <p>
+        <p class="benefits-pre-title">old traditional school</p>
+        <h2 class="benefits-title">Why people come to us?</h2>
+        <p class="benefits-after-title">
           Only good things are said about us. But it's better to see and feel 1
           time than read 10 times.
         </p>
       </section>
-      <section>
-        <p>for true enjoyers of the atmosphere</p>
-        <h2>Our barbers</h2>
-        <ul>
-          <li>
+      <section class="barbers">
+        <p class="barbers-pre-title">for true enjoyers of the atmosphere</p>
+        <h2 class="barbers-title">Our barbers</h2>
+        <ul class="barbers-list list">
+          <li class="barbers-item">
             <img
               src="./images/barber-img1.jpg"
               alt="barber"
               width="370"
               height="346"
             />
-            <h3>John Smith</h3>
-            <p>Extreme Barber</p>
+            <h3 class="barbers-name">John Smith</h3>
+            <p class="barbers-descr">Extreme Barber</p>
           </li>
-          <li>
+          <li class="barbers-item">
             <img
               src="./images/barber-img2.jpg"
               alt="barber"
               width="370"
               height="346"
             />
-            <h3>Michele Doe</h3>
-            <p>Extreme Barber</p>
+            <h3 class="barbers-name">Michele Doe</h3>
+            <p class="barbers-descr">Extreme Barber</p>
           </li>
-          <li>
+          <li class="barbers-item">
             <img
               src="./images/barber-img3.jpg"
               alt="barber"
               width="370"
               height="346"
             />
-            <h3>Alan Black</h3>
-            <p>Extreme Barber</p>
+            <h3 class="barbers-name">Alan Black</h3>
+            <p class="barbers-descr">Extreme Barber</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2 hidden>Gallery</h2>
-        <p>in Latin, "barba" means "beard"</p>
-        <ul>
-          <li>
+      <section class="gallery">
+        <h2 class="visually-hidden">Gallery</h2>
+        <p class="gallery-text">in Latin, "barba" means "beard"</p>
+        <ul class="gallery-list list">
+          <li class="gallery-item">
             <img
               src="./images/gallery-img1.jpg"
               alt="haircut"
@@ -203,7 +203,7 @@
               height="360"
             />
           </li>
-          <li>
+          <li class="gallery-item">
             <img
               src="./images/gallery-img2.jpg"
               alt="haircut"
@@ -211,7 +211,7 @@
               height="360"
             />
           </li>
-          <li>
+          <li class="gallery-item">
             <img
               src="./images/gallery-img3.jpg"
               alt="haircut"
@@ -219,7 +219,7 @@
               height="360"
             />
           </li>
-          <li>
+          <li class="gallery-item">
             <img
               src="./images/gallery-img4.jpg"
               alt="haircut"
@@ -229,42 +229,42 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Online-booking</h2>
+      <section class="form">
+        <h2 class="form-title">Online-booking</h2>
       </section>
-      <section>
-        <h2>Contacts</h2>
-        <address>
-          <ul>
-            <li>
-              <a
+      <section class="contacts">
+        <h2 class="contacts-title">Contacts</h2>
+        <address class="contacts-adress">
+          <ul class="contacts-list list">
+            <li class="contacts-item">
+              <a class="adress-link link"
                 href="https://goo.gl/maps/Y2xHM7gw3KYHwZha8"
                 rel="noopener nofollow noreferrer"
                 target="_blank"
                 >st. Vasilkova, 7A Kyiv, 08132</a
               >
             </li>
-            <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-            <li>
-              <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+            <li class="contacts-item"><a class="tel-link link" href="tel:+380441111111">+38 044 111 11 11</a></li>
+            <li class="contacts-item">
+              <a class="email-link link" href="mailto:barbershop@email.com">barbershop@email.com</a>
             </li>
           </ul>
           </address>
           <b>working hours</b>
-          <p>Every day from 9:00 to 22:00</p>
+          <p class="contacts-text">Every day from 9:00 to 22:00</p>
         </address>
       </section>
     </main>
-    <footer>
-        <p>&#169;Copyright 2020</p>
-        <ul>
-          <li>
-            <a href="" rel="noopener nofollow noreferrer" target="_blank"
+    <footer class="footer">
+        <p class="footer-copiright">&#169;Copyright 2020</p>
+        <ul class="footer-list list">
+          <li class="footer-item">
+            <a class="footer-link link" href="" rel="noopener nofollow noreferrer" target="_blank"
               >Instagram</a
             >
           </li>
-          <li>
-            <a href="" rel="noopener nofollow noreferrer" target="_blank"
+          <li class="footer-item">
+            <a class="footer-link link" href="" rel="noopener nofollow noreferrer" target="_blank"
               >Youtube</a
             >
           </li>
