--- a/index.html
+++ b/index.html
@@ -5,230 +5,269 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbershop</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <a class="header-logo" href="./index.html"><img src="./images/logo.svg" alt="logo" /></a>
-      <nav class="header-nav">
-        <ul class="header-list list">
-          <li class="header-item"><a class="header-link link" href="">About</a></li>
-          <li class="header-item"><a class="header-link link" href="">Services and prices</a></li>
-          <li class="header-item"><a class="header-link link" href="">Barbers</a></li>
-          <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-
-      <a class="header-tel link" href="tel:+380441111111">+38 044 111 11 11</a>
-      <button class="header-btn" type="button">online-booking</button>
+      <div class="container header-container">
+        <a class="header-logo" href="./index.html"
+          ><img src="./images/logo.svg" alt="logo"
+        /></a>
+        <nav class="header-nav">
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link" href="">About</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Services and prices</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Barbers</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="header-tel link" href="tel:+380441111111"
+          >+38 044 111 11 11</a
+        >
+        <button class="header-btn" type="button">online-booking</button>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <ul class="hero-list list">
-          <li class="hero-item">
-            <a class="hero-link link" href="" rel="noopener nofollow noreferrer" target="_blank"
-              >Instagram</a
-            >
-          </li>
-          <li class="hero-item">
-            <a class="hero-link link" href="" rel="noopener nofollow noreferrer" target="_blank"
-              >Youtube</a
-            >
-          </li>
-        </ul>
-        <p class="hero-pre-title">A hair salon for men in Kyiv</p>
-        <h1 class="hero-title">BarberShop</h1>
-        <p class="hero-descr">
-          We are experts in trendy men’s haircuts. We work quickly, carefully
-          and with style.
-        </p>
+        <div class="container">
+          <ul class="hero-list list">
+            <li class="hero-item">
+              <a
+                class="hero-link link"
+                href=""
+                rel="noopener nofollow noreferrer"
+                target="_blank"
+                >Instagram</a
+              >
+            </li>
+            <li class="hero-item">
+              <a
+                class="hero-link link"
+                href=""
+                rel="noopener nofollow noreferrer"
+                target="_blank"
+                >Youtube</a
+              >
+            </li>
+          </ul>
+          <p class="hero-pre-title">A hair salon for men in Kyiv</p>
+          <h1 class="hero-title">BarberShop</h1>
+          <p class="hero-descr">
+            We are experts in trendy men’s haircuts. We work quickly, carefully
+            and with style.
+          </p>
+        </div>
       </section>
 
       <section class="about">
-        <ul class="about-list list">
-          <li class="about-item">
-            <img
-              src="./images/about-img-1.jpg"
-              alt="haircut"
-              width="270"
-              height="445"
-            />
-          </li>
-          <li class="about-item">
-            <img
-              src="./images/about-img-2.jpg"
-              alt="haircut"
-              width="270"
-              height="445"
-            />
-          </li>
-        </ul>
-        <p class="about-pre-title">About</p>
-        <h2 class="about-title">Best Barbershop in your city</h2>
-        <p class="about-after-title">
-          If you want to add more confidence to your image, you should
-          definitely visit us.
-        </p>
-        <p class="about-descr">
-          We are a team that never stops at what has been achieved and are
-          thirsty for changes. And when you fall into the hands of our master,
-          you will never be the same again. We are a team that is always "on the
-          same wave" with clients. Therefore, we are always ready to improve
-          everyone who comes to us!
-        </p>
-        <button class="about-btn" type="button">online-booking</button>
+        <div class="container">
+          <ul class="about-list list">
+            <li class="about-item">
+              <img
+                src="./images/about-img-1.jpg"
+                alt="haircut"
+                width="270"
+                height="445"
+              />
+            </li>
+            <li class="about-item">
+              <img
+                src="./images/about-img-2.jpg"
+                alt="haircut"
+                width="270"
+                height="445"
+              />
+            </li>
+          </ul>
+          <p class="about-pre-title">About</p>
+          <h2 class="about-title">Best Barbershop in your city</h2>
+          <p class="about-after-title">
+            If you want to add more confidence to your image, you should
+            definitely visit us.
+          </p>
+          <p class="about-descr">
+            We are a team that never stops at what has been achieved and are
+            thirsty for changes. And when you fall into the hands of our master,
+            you will never be the same again. We are a team that is always "on
+            the same wave" with clients. Therefore, we are always ready to
+            improve everyone who comes to us!
+          </p>
+          <button class="about-btn" type="button">online-booking</button>
+        </div>
       </section>
 
       <section class="price">
-        <p class="price-pre-title">spend your time with the best masters</p>
-        <h2 class="price-title">Services and prices</h2>
-        <ul class="price-list list">
-          <li class="price-item">
-            <p class="price-name">Men’s haircut</p>
-            <p class="price-descr">from 300 uah.</p>
-          </li>
-          <li class="price-item">
-            <p class="price-name">Beard trim</p>
-            <p class="price-descr">from 300 uah.</p>
-          </li>
-          <li class="price-item">
-            <p class="price-name">Mustache trim</p>
-            <p class="price-descr">from 200 uah.</p>
-          </li>
-          <li class="price-item">
-            <p class="price-name">Straight razor shave</p>
-            <p class="price-descr">from 200 uah.</p>
-          </li>
-        </ul>
+        <div class="container">
+          <p class="price-pre-title">spend your time with the best masters</p>
+          <h2 class="price-title">Services and prices</h2>
+          <ul class="price-list list">
+            <li class="price-item">
+              <p class="price-name">Men’s haircut</p>
+              <p class="price-descr">from 300 uah.</p>
+            </li>
+            <li class="price-item">
+              <p class="price-name">Beard trim</p>
+              <p class="price-descr">from 300 uah.</p>
+            </li>
+            <li class="price-item">
+              <p class="price-name">Mustache trim</p>
+              <p class="price-descr">from 200 uah.</p>
+            </li>
+            <li class="price-item">
+              <p class="price-name">Straight razor shave</p>
+              <p class="price-descr">from 200 uah.</p>
+            </li>
+          </ul>
 
-        <ul class="price-list list">
-          <li class="price-item">
-            <p class="price-name">Trainee’s haircut</p>
-            <p class="price-descr">from 50 uah.</p>
-          </li>
-          <li class="price-item">
-            <p class="price-name">Haircut under the nozzle</p>
-            <p class="price-descr">from 200 uah.</p>
-          </li>
-          <li class="price-item">
-            <p class="price-name">Children’s haircut (0-12 y.o.)</p>
-            <p class="price-descr">from 300 uah.</p>
-          </li>
-          <li class="price-item">
-            <p class="price-name">Camouflage of gray hair</p>
-            <p class="price-descr">from 200 uah.</p>
-          </li>
-        </ul>
-        <button class="price-btn" type="button">online-booking</button>
+          <ul class="price-list list">
+            <li class="price-item">
+              <p class="price-name">Trainee’s haircut</p>
+              <p class="price-descr">from 50 uah.</p>
+            </li>
+            <li class="price-item">
+              <p class="price-name">Haircut under the nozzle</p>
+              <p class="price-descr">from 200 uah.</p>
+            </li>
+            <li class="price-item">
+              <p class="price-name">Children’s haircut (0-12 y.o.)</p>
+              <p class="price-descr">from 300 uah.</p>
+            </li>
+            <li class="price-item">
+              <p class="price-name">Camouflage of gray hair</p>
+              <p class="price-descr">from 200 uah.</p>
+            </li>
+          </ul>
+          <button class="price-btn" type="button">online-booking</button>
+        </div>
       </section>
 
       <section class="benefits">
-        <ul class="benefits-list list">
-          <li class="benefits-item">
-            <span>600</span>
-            <sup>+</sup>
-            <p class="benefits-descr">Satisfied customers per day</p>
-          </li>
-          <li class="benefits-item">
-            <span>50</span>
-            <sup>+</sup>
-            <p class="benefits-descr">Awards for excellent service</p>
-          </li>
-          <li class="benefits-item">
-            <span>20</span>
-            <sup>+</sup>
-            <p class="benefits-descr">Kyiv’s best barbers</p>
-          </li>
-          <li class="benefits-item">
-            <span>100</span>
-            <sup>+</sup>
-            <p class="benefits-descr">Gifts for regular customers</p>
-          </li>
-        </ul>
-        <p class="benefits-pre-title">old traditional school</p>
-        <h2 class="benefits-title">Why people come to us?</h2>
-        <p class="benefits-after-title">
-          Only good things are said about us. But it's better to see and feel 1
-          time than read 10 times.
-        </p>
+        <div class="container">
+          <ul class="benefits-list list">
+            <li class="benefits-item">
+              <span>600</span>
+              <sup>+</sup>
+              <p class="benefits-descr">Satisfied customers per day</p>
+            </li>
+            <li class="benefits-item">
+              <span>50</span>
+              <sup>+</sup>
+              <p class="benefits-descr">Awards for excellent service</p>
+            </li>
+            <li class="benefits-item">
+              <span>20</span>
+              <sup>+</sup>
+              <p class="benefits-descr">Kyiv’s best barbers</p>
+            </li>
+            <li class="benefits-item">
+              <span>100</span>
+              <sup>+</sup>
+              <p class="benefits-descr">Gifts for regular customers</p>
+            </li>
+          </ul>
+          <p class="benefits-pre-title">old traditional school</p>
+          <h2 class="benefits-title">Why people come to us?</h2>
+          <p class="benefits-after-title">
+            Only good things are said about us. But it's better to see and feel
+            1 time than read 10 times.
+          </p>
+        </div>
       </section>
+
       <section class="barbers">
-        <p class="barbers-pre-title">for true enjoyers of the atmosphere</p>
-        <h2 class="barbers-title">Our barbers</h2>
-        <ul class="barbers-list list">
-          <li class="barbers-item">
-            <img
-              src="./images/barber-img1.jpg"
-              alt="barber"
-              width="370"
-              height="346"
-            />
-            <h3 class="barbers-name">John Smith</h3>
-            <p class="barbers-descr">Extreme Barber</p>
-          </li>
-          <li class="barbers-item">
-            <img
-              src="./images/barber-img2.jpg"
-              alt="barber"
-              width="370"
-              height="346"
-            />
-            <h3 class="barbers-name">Michele Doe</h3>
-            <p class="barbers-descr">Extreme Barber</p>
-          </li>
-          <li class="barbers-item">
-            <img
-              src="./images/barber-img3.jpg"
-              alt="barber"
-              width="370"
-              height="346"
-            />
-            <h3 class="barbers-name">Alan Black</h3>
-            <p class="barbers-descr">Extreme Barber</p>
-          </li>
-        </ul>
+        <div class="container">
+          <p class="barbers-pre-title">for true enjoyers of the atmosphere</p>
+          <h2 class="barbers-title">Our barbers</h2>
+          <ul class="barbers-list list">
+            <li class="barbers-item">
+              <img
+                src="./images/barber-img1.jpg"
+                alt="barber"
+                width="370"
+                height="346"
+              />
+              <h3 class="barbers-name">John Smith</h3>
+              <p class="barbers-descr">Extreme Barber</p>
+            </li>
+            <li class="barbers-item">
+              <img
+                src="./images/barber-img2.jpg"
+                alt="barber"
+                width="370"
+                height="346"
+              />
+              <h3 class="barbers-name">Michele Doe</h3>
+              <p class="barbers-descr">Extreme Barber</p>
+            </li>
+            <li class="barbers-item">
+              <img
+                src="./images/barber-img3.jpg"
+                alt="barber"
+                width="370"
+                height="346"
+              />
+              <h3 class="barbers-name">Alan Black</h3>
+              <p class="barbers-descr">Extreme Barber</p>
+            </li>
+          </ul>
+        </div>
       </section>
+
       <section class="gallery">
-        <h2 class="visually-hidden">Gallery</h2>
-        <p class="gallery-text">in Latin, "barba" means "beard"</p>
-        <ul class="gallery-list list">
-          <li class="gallery-item">
-            <img
-              src="./images/gallery-img1.jpg"
-              alt="haircut"
-              width="270"
-              height="360"
-            />
-          </li>
-          <li class="gallery-item">
-            <img
-              src="./images/gallery-img2.jpg"
-              alt="haircut"
-              width="270"
-              height="360"
-            />
-          </li>
-          <li class="gallery-item">
-            <img
-              src="./images/gallery-img3.jpg"
-              alt="haircut"
-              width="270"
-              height="360"
-            />
-          </li>
-          <li class="gallery-item">
-            <img
-              src="./images/gallery-img4.jpg"
-              alt="haircut"
-              width="270"
-              height="360"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Gallery</h2>
+          <p class="gallery-text">in Latin, "barba" means "beard"</p>
+          <ul class="gallery-list list">
+            <li class="gallery-item">
+              <img
+                src="./images/gallery-img1.jpg"
+                alt="haircut"
+                width="270"
+                height="360"
+              />
+            </li>
+            <li class="gallery-item">
+              <img
+                src="./images/gallery-img2.jpg"
+                alt="haircut"
+                width="270"
+                height="360"
+              />
+            </li>
+            <li class="gallery-item">
+              <img
+                src="./images/gallery-img3.jpg"
+                alt="haircut"
+                width="270"
+                height="360"
+              />
+            </li>
+            <li class="gallery-item">
+              <img
+                src="./images/gallery-img4.jpg"
+                alt="haircut"
+                width="270"
+                height="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
+
       <section class="form">
         <h2 class="form-title">Online-booking</h2>
       </section>
@@ -237,38 +276,56 @@
         <address class="contacts-adress">
           <ul class="contacts-list list">
             <li class="contacts-item">
-              <a class="adress-link link"
+              <a
+                class="adress-link link"
                 href="https://goo.gl/maps/Y2xHM7gw3KYHwZha8"
                 rel="noopener nofollow noreferrer"
                 target="_blank"
                 >st. Vasilkova, 7A Kyiv, 08132</a
               >
             </li>
-            <li class="contacts-item"><a class="tel-link link" href="tel:+380441111111">+38 044 111 11 11</a></li>
             <li class="contacts-item">
-              <a class="email-link link" href="mailto:barbershop@email.com">barbershop@email.com</a>
+              <a class="tel-link link" href="tel:+380441111111"
+                >+38 044 111 11 11</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="email-link link" href="mailto:barbershop@email.com"
+                >barbershop@email.com</a
+              >
             </li>
           </ul>
-          </address>
+
           <b>working hours</b>
           <p class="contacts-text">Every day from 9:00 to 22:00</p>
         </address>
       </section>
     </main>
+
     <footer class="footer">
+      <div class="container">
         <p class="footer-copiright">&#169;Copyright 2020</p>
         <ul class="footer-list list">
           <li class="footer-item">
-            <a class="footer-link link" href="" rel="noopener nofollow noreferrer" target="_blank"
+            <a
+              class="footer-link link"
+              href=""
+              rel="noopener nofollow noreferrer"
+              target="_blank"
               >Instagram</a
             >
           </li>
           <li class="footer-item">
-            <a class="footer-link link" href="" rel="noopener nofollow noreferrer" target="_blank"
+            <a
+              class="footer-link link"
+              href=""
+              rel="noopener nofollow noreferrer"
+              target="_blank"
               >Youtube</a
             >
           </li>
         </ul>
+      </div>
     </footer>
   </body>
 </html>
