--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
     <main>
       <section class="hero">
-        <div class="container">
+        <div class="container hero-container">
           <ul class="hero-list list">
             <li class="hero-item">
               <a
@@ -64,12 +64,14 @@
               >
             </li>
           </ul>
-          <p class="hero-pre-title">A hair salon for men in Kyiv</p>
-          <h1 class="hero-title">BarberShop</h1>
-          <p class="hero-descr">
-            We are experts in trendy men’s haircuts. We work quickly, carefully
-            and with style.
-          </p>
+          <div class="hero-content">
+            <p class="hero-pre-title">A hair salon for men in Kyiv</p>
+            <h1 class="hero-title">BarberShop</h1>
+            <p class="hero-descr">
+              We are experts in trendy men’s haircuts. We work quickly,
+              carefully and with style.
+            </p>
+          </div>
         </div>
       </section>
 
@@ -93,20 +95,22 @@
               />
             </li>
           </ul>
-          <p class="about-pre-title">About</p>
-          <h2 class="about-title">Best Barbershop in your city</h2>
-          <p class="about-after-title">
-            If you want to add more confidence to your image, you should
-            definitely visit us.
-          </p>
-          <p class="about-descr">
-            We are a team that never stops at what has been achieved and are
-            thirsty for changes. And when you fall into the hands of our master,
-            you will never be the same again. We are a team that is always "on
-            the same wave" with clients. Therefore, we are always ready to
-            improve everyone who comes to us!
-          </p>
-          <button class="about-btn" type="button">online-booking</button>
+          <div class="about-content">
+            <p class="about-pre-title">About</p>
+            <h2 class="about-title">Best Barbershop in your city</h2>
+            <p class="about-after-title">
+              If you want to add more confidence to your image, you should
+              definitely visit us.
+            </p>
+            <p class="about-descr">
+              We are a team that never stops at what has been achieved and are
+              thirsty for changes. And when you fall into the hands of our
+              master, you will never be the same again. We are a team that is
+              always "on the same wave" with clients. Therefore, we are always
+              ready to improve everyone who comes to us!
+            </p>
+            <button class="about-btn" type="button">online-booking</button>
+          </div>
         </div>
       </section>
 
@@ -114,43 +118,45 @@
         <div class="container">
           <p class="price-pre-title">spend your time with the best masters</p>
           <h2 class="price-title">Services and prices</h2>
-          <ul class="price-list list">
-            <li class="price-item">
-              <p class="price-name">Men’s haircut</p>
-              <p class="price-descr">from 300 uah.</p>
-            </li>
-            <li class="price-item">
-              <p class="price-name">Beard trim</p>
-              <p class="price-descr">from 300 uah.</p>
-            </li>
-            <li class="price-item">
-              <p class="price-name">Mustache trim</p>
-              <p class="price-descr">from 200 uah.</p>
-            </li>
-            <li class="price-item">
-              <p class="price-name">Straight razor shave</p>
-              <p class="price-descr">from 200 uah.</p>
-            </li>
-          </ul>
+          <div class="price-content">
+            <ul class="price-list list">
+              <li class="price-item">
+                <p class="price-name">Men’s haircut</p>
+                <p class="price-descr">from 300 uah.</p>
+              </li>
+              <li class="price-item">
+                <p class="price-name">Beard trim</p>
+                <p class="price-descr">from 300 uah.</p>
+              </li>
+              <li class="price-item">
+                <p class="price-name">Mustache trim</p>
+                <p class="price-descr">from 200 uah.</p>
+              </li>
+              <li class="price-item">
+                <p class="price-name">Straight razor shave</p>
+                <p class="price-descr">from 200 uah.</p>
+              </li>
+            </ul>
 
-          <ul class="price-list list">
-            <li class="price-item">
-              <p class="price-name">Trainee’s haircut</p>
-              <p class="price-descr">from 50 uah.</p>
-            </li>
-            <li class="price-item">
-              <p class="price-name">Haircut under the nozzle</p>
-              <p class="price-descr">from 200 uah.</p>
-            </li>
-            <li class="price-item">
-              <p class="price-name">Children’s haircut (0-12 y.o.)</p>
-              <p class="price-descr">from 300 uah.</p>
-            </li>
-            <li class="price-item">
-              <p class="price-name">Camouflage of gray hair</p>
-              <p class="price-descr">from 200 uah.</p>
-            </li>
-          </ul>
+            <ul class="price-list list">
+              <li class="price-item">
+                <p class="price-name">Trainee’s haircut</p>
+                <p class="price-descr">from 50 uah.</p>
+              </li>
+              <li class="price-item">
+                <p class="price-name">Haircut under the nozzle</p>
+                <p class="price-descr">from 200 uah.</p>
+              </li>
+              <li class="price-item">
+                <p class="price-name">Children’s haircut (0-12 y.o.)</p>
+                <p class="price-descr">from 300 uah.</p>
+              </li>
+              <li class="price-item">
+                <p class="price-name">Camouflage of gray hair</p>
+                <p class="price-descr">from 200 uah.</p>
+              </li>
+            </ul>
+          </div>
           <button class="price-btn" type="button">online-booking</button>
         </div>
       </section>
@@ -179,12 +185,14 @@
               <p class="benefits-descr">Gifts for regular customers</p>
             </li>
           </ul>
-          <p class="benefits-pre-title">old traditional school</p>
-          <h2 class="benefits-title">Why people come to us?</h2>
-          <p class="benefits-after-title">
-            Only good things are said about us. But it's better to see and feel
-            1 time than read 10 times.
-          </p>
+          <div class="benefits-content">
+            <p class="benefits-pre-title">old traditional school</p>
+            <h2 class="benefits-title">Why people come to us?</h2>
+            <p class="benefits-after-title">
+              Only good things are said about us. But it's better to see and
+              feel 1 time than read 10 times.
+            </p>
+          </div>
         </div>
       </section>
 
