edit styles css

--- a/index.html
+++ b/index.html
@@ -208,8 +208,10 @@
                 width="370"
                 height="346"
               />
-              <h3 class="barbers-name">John Smith</h3>
-              <p class="barbers-descr">Extreme Barber</p>
+              <div class="barbers-card-content">
+                <h3 class="barbers-name">John Smith</h3>
+                <p class="barbers-descr">Extreme Barber</p>
+              </div>
             </li>
             <li class="barbers-item">
               <img
@@ -218,8 +220,10 @@
                 width="370"
                 height="346"
               />
-              <h3 class="barbers-name">Michele Doe</h3>
-              <p class="barbers-descr">Extreme Barber</p>
+              <div class="barbers-card-content">
+                <h3 class="barbers-name">Michele Doe</h3>
+                <p class="barbers-descr">Extreme Barber</p>
+              </div>
             </li>
             <li class="barbers-item">
               <img
@@ -228,8 +232,10 @@
                 width="370"
                 height="346"
               />
-              <h3 class="barbers-name">Alan Black</h3>
-              <p class="barbers-descr">Extreme Barber</p>
+              <div class="barbers-card-content">
+                <h3 class="barbers-name">Alan Black</h3>
+                <p class="barbers-descr">Extreme Barber</p>
+              </div>
             </li>
           </ul>
         </div>
