--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   <body>
     <header class="header">
       <div class="container header-container">
-        <a class="header-logo" href="./index.html"
-          ><img src="./images/logo.svg" alt="logo"
-        /></a>
+        <a class="header-logo" href="./index.html">
+          <svg class="header-logo-icon" width="69" height="55">
+            <use href="./images/icons.svg#icon-Logo"></use>
+          </svg>
+        </a>
         <nav class="header-nav">
           <ul class="header-list list">
             <li class="header-item">
@@ -165,23 +167,31 @@
         <div class="container">
           <ul class="benefits-list list">
             <li class="benefits-item">
-              <span>600</span>
-              <sup>+</sup>
+              <div class="benefits-item-top">
+                <span>600</span>
+                <sup>+</sup>
+              </div>
               <p class="benefits-descr">Satisfied customers per day</p>
             </li>
             <li class="benefits-item">
-              <span>50</span>
-              <sup>+</sup>
+              <div class="benefits-item-top">
+                <span>50</span>
+                <sup>+</sup>
+              </div>
               <p class="benefits-descr">Awards for excellent service</p>
             </li>
             <li class="benefits-item">
-              <span>20</span>
-              <sup>+</sup>
+              <div class="benefits-item-top">
+                <span>20</span>
+                <sup>+</sup>
+              </div>
               <p class="benefits-descr">Kyiv’s best barbers</p>
             </li>
             <li class="benefits-item">
-              <span>100</span>
-              <sup>+</sup>
+              <div class="benefits-item-top">
+                <span>100</span>
+                <sup>+</sup>
+              </div>
               <p class="benefits-descr">Gifts for regular customers</p>
             </li>
           </ul>
@@ -211,6 +221,56 @@
               <div class="barbers-card-content">
                 <h3 class="barbers-name">John Smith</h3>
                 <p class="barbers-descr">Extreme Barber</p>
+                <ul class="barbers-soc-list list">
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      target="_blank"
+                      rel="noferrer nofollow noopener"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      target="_blank"
+                      rel="noferrer nofollow noopener"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      target="_blank"
+                      rel="noferrer nofollow noopener"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      target="_blank"
+                      rel="noferrer nofollow noopener"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="barbers-item">
@@ -223,6 +283,56 @@
               <div class="barbers-card-content">
                 <h3 class="barbers-name">Michele Doe</h3>
                 <p class="barbers-descr">Extreme Barber</p>
+                <ul class="barbers-soc-list list">
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      target="_blank"
+                      rel="noferrer nofollow noopener"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      target="_blank"
+                      rel="noferrer nofollow noopener"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      target="_blank"
+                      rel="noferrer nofollow noopener"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      target="_blank"
+                      rel="noferrer nofollow noopener"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="barbers-item">
@@ -235,6 +345,56 @@
               <div class="barbers-card-content">
                 <h3 class="barbers-name">Alan Black</h3>
                 <p class="barbers-descr">Extreme Barber</p>
+                <ul class="barbers-soc-list list">
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      target="_blank"
+                      rel="noferrer nofollow noopener"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      target="_blank"
+                      rel="noferrer nofollow noopener"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      target="_blank"
+                      rel="noferrer nofollow noopener"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      target="_blank"
+                      rel="noferrer nofollow noopener"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -281,39 +441,42 @@
           </ul>
         </div>
       </section>
+      <div class="contact-wrap">
+        <div class="container">
+          <section class="form">
+            <h2 class="form-title">Online-booking</h2>
+          </section>
+          <section class="contacts">
+            <h2 class="contacts-title">Contacts</h2>
+            <address class="contacts-adress">
+              <ul class="contacts-list list">
+                <li class="contacts-item">
+                  <a
+                    class="adress-link link"
+                    href="https://goo.gl/maps/Y2xHM7gw3KYHwZha8"
+                    rel="noopener nofollow noreferrer"
+                    target="_blank"
+                    >st. Vasilkova, 7A Kyiv, 08132</a
+                  >
+                </li>
+                <li class="contacts-item">
+                  <a class="tel-link link" href="tel:+380441111111"
+                    >+38 044 111 11 11</a
+                  >
+                </li>
+                <li class="contacts-item">
+                  <a class="email-link link" href="mailto:barbershop@email.com"
+                    >barbershop@email.com</a
+                  >
+                </li>
+              </ul>
 
-      <section class="form">
-        <h2 class="form-title">Online-booking</h2>
-      </section>
-      <section class="contacts">
-        <h2 class="contacts-title">Contacts</h2>
-        <address class="contacts-adress">
-          <ul class="contacts-list list">
-            <li class="contacts-item">
-              <a
-                class="adress-link link"
-                href="https://goo.gl/maps/Y2xHM7gw3KYHwZha8"
-                rel="noopener nofollow noreferrer"
-                target="_blank"
-                >st. Vasilkova, 7A Kyiv, 08132</a
-              >
-            </li>
-            <li class="contacts-item">
-              <a class="tel-link link" href="tel:+380441111111"
-                >+38 044 111 11 11</a
-              >
-            </li>
-            <li class="contacts-item">
-              <a class="email-link link" href="mailto:barbershop@email.com"
-                >barbershop@email.com</a
-              >
-            </li>
-          </ul>
-
-          <b>working hours</b>
-          <p class="contacts-text">Every day from 9:00 to 22:00</p>
-        </address>
-      </section>
+              <b>working hours</b>
+              <p class="contacts-text">Every day from 9:00 to 22:00</p>
+            </address>
+          </section>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
