add contacts section

--- a/index.html
+++ b/index.html
@@ -441,11 +441,13 @@
           </ul>
         </div>
       </section>
+
       <div class="contact-wrap">
         <div class="container">
           <section class="form">
             <h2 class="form-title">Online-booking</h2>
           </section>
+
           <section class="contacts">
             <h2 class="contacts-title">Contacts</h2>
             <address class="contacts-adress">
@@ -471,7 +473,7 @@
                 </li>
               </ul>
 
-              <b>working hours</b>
+              <b class="b-text">working hours</b>
               <p class="contacts-text">Every day from 9:00 to 22:00</p>
             </address>
           </section>
