--- a/index.html
+++ b/index.html
@@ -46,26 +46,28 @@
     <main>
       <section class="hero">
         <div class="container hero-container">
-          <ul class="hero-list list">
-            <li class="hero-item">
-              <a
-                class="hero-link link"
-                href=""
-                rel="noopener nofollow noreferrer"
-                target="_blank"
-                >Instagram</a
-              >
-            </li>
-            <li class="hero-item">
-              <a
-                class="hero-link link"
-                href=""
-                rel="noopener nofollow noreferrer"
-                target="_blank"
-                >Youtube</a
-              >
-            </li>
-          </ul>
+          <div class="hero-soc">
+            <ul class="hero-list list">
+              <li class="hero-item">
+                <a
+                  class="hero-link link"
+                  href=""
+                  rel="noopener nofollow noreferrer"
+                  target="_blank"
+                  >Instagram</a
+                >
+              </li>
+              <li class="hero-item">
+                <a
+                  class="hero-link link"
+                  href=""
+                  rel="noopener nofollow noreferrer"
+                  target="_blank"
+                  >Youtube</a
+                >
+              </li>
+            </ul>
+          </div>
           <div class="hero-content">
             <p class="hero-pre-title">A hair salon for men in Kyiv</p>
             <h1 class="hero-title">BarberShop</h1>
@@ -458,17 +460,27 @@
                     href="https://goo.gl/maps/Y2xHM7gw3KYHwZha8"
                     rel="noopener nofollow noreferrer"
                     target="_blank"
-                    >st. Vasilkova, 7A Kyiv, 08132</a
+                  >
+                    <svg class="adress-icon" width="16px" height="18px">
+                      <use href="./images/icons.svg#icon-map-pin"></use>
+                    </svg>
+                    st. Vasilkova, 7A Kyiv, 08132</a
                   >
                 </li>
                 <li class="contacts-item">
-                  <a class="tel-link link" href="tel:+380441111111"
-                    >+38 044 111 11 11</a
+                  <a class="tel-link link" href="tel:+380441111111">
+                    <svg class="phone-icon" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-phone"></use>
+                    </svg>
+                    +38 044 111 11 11</a
                   >
                 </li>
                 <li class="contacts-item">
-                  <a class="email-link link" href="mailto:barbershop@email.com"
-                    >barbershop@email.com</a
+                  <a class="email-link link" href="mailto:barbershop@email.com">
+                    <svg class="mail-icon" width="18px" height="14px">
+                      <use href="./images/icons.svg#icon-mail"></use>
+                    </svg>
+                    barbershop@email.com</a
                   >
                 </li>
               </ul>
